--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -12,26 +12,27 @@
       "reset_info": "Лимит ће се обновити сутра у поноћ",
       "premium_days": "⏰ Премијум претплата истиче за {days} дана",
       "premium_hours": "⏰ Премијум претплата истиче за {hours} сати",
-      "premium_expiring": "⚠️ Премијум претплата истиче данас!"
+      "premium_expiring": "⏰ Премијум претплата истиче данас!"
     },
     "help": {
       "title": "🤖 Помоћ о боту",
       "commands_title": "Доступне команде:",
-      "start_command": "/start - Почети разговор са ботом",
-      "help_command": "/help - Прикажи ову помоћ",
-      "gender_command": "/choose_gender - Изабери пол сапутника",
-      "status_command": "/status - Прикажи статус налога и претплате",
-      "language_command": "/language - Изабери језик интерфејса",
-      "restart_command": "/restart - Рестартовати бота и обрисати све податке",
-      "stop_command": "/stop - Зауставити интеракцију и обрисати све податке",
+      "start_command": "/start - Покрени бота",
+      "help_command": "/help - Помоћ",
+      "gender_command": "/choose_gender - Промени пол",
+      "status_command": "/status - Статус налога",
+      "language_command": "/language - Језик",
+      "quiz_command": "/quiz - Упознајмо се",
+      "restart_command": "/restart - Рестарт бота",
+      "stop_command": "/stop - Заустави бота",
       "communication_title": "💬 Комуникација:",
       "free_limit": "• Бесплатно: {free_limit} порука дневно",
-      "premium_unlimited": "• Премијум: неограничена комуникација",
+      "premium_unlimited": "• Премијум: неограничена комуникација.",
       "companion_title": "🎭 Избор сапутника:",
       "female_description": "• Девојка - слатка и емпатична",
       "male_description": "• Младић - самоуверен и игрив",
       "premium_title": "💎 Премијум претплата:",
-      "premium_description": "Отвара неограничену комуникацију и додатне функције",
+      "premium_description": "• Отвара неограничену комуникацију и додатне функције.",
       "faq_title": "❓ Честа питања:",
       "context_memory": "• Бот памти контекст разговора",
       "gender_change": "• Можеш променити пол сапутника у било ком тренутку",
@@ -45,12 +46,12 @@
       "available_languages": "Доступни језици:"
     },
     "restart": {
-      "confirmation": "⚠️ <b>Рестарт бота</b>\n\nДа ли сте сигурни да желите рестартовати бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
+      "confirmation": "🔄 <b>Рестарт бота</b>\n\nДа ли сте сигурни да желите рестартовати бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nМолимо, потврдите ову радњу.",
       "success": "✅ <b>Бот рестартован!</b>\n\nСви подаци обрисани. Почињемо поново...",
       "cancelled": "❌ Рестарт отказан"
     },
     "stop": {
-      "confirmation": "⚠️ <b>Зауставити бота</b>\n\nДа ли сте сигурни да желите зауставити бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
+      "confirmation": "🛑 <b>Зауставити бота</b>\n\nДа ли сте сигурни да желите зауставити бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
       "success": "👋 <b>Бот заустављен</b>\n\nСви подаци обрисани. Довиђења!",
       "cancelled": "❌ Заустављање отказано"
     }
@@ -64,7 +65,7 @@
   "gender": {
     "choose": "Изабери пол сапутника:",
     "toggle_gender": "Пол сапутника промењен на {gender} 😊",
-    "change_warning": "⚠️ Да ли сте сигурни да желите променити пол сапутника?\n\nЦела историја ћаскања ће бити обрисана!",
+    "change_warning": "🔄 Да ли сте сигурни да желите променити пол сапутника?\n\nЦела историја ћаскања ће бити обрисана!",
     "change_confirmed": "Историја ћаскања обрисана. Изабери пол сапутника:",
     "change_cancelled": "Промена пола отказана. Можеш наставити комуникацију."
   },
