--- a/locales/de/translations.json
+++ b/locales/de/translations.json
@@ -12,26 +12,27 @@
       "reset_info": "Das Limit wird morgen um Mitternacht zurückgesetzt",
       "premium_days": "⏰ Premium-Abonnement läuft in {days} Tagen ab",
       "premium_hours": "⏰ Premium-Abonnement läuft in {hours} Stunden ab",
-      "premium_expiring": "⚠️ Premium-Abonnement läuft heute ab!"
+      "premium_expiring": "⏰ Premium-Abonnement läuft heute ab!"
     },
     "help": {
       "title": "🤖 Bot-Hilfe",
       "commands_title": "Verfügbare Befehle:",
-      "start_command": "/start - Mit dem Bot chatten beginnen",
-      "help_command": "/help - Diese Hilfe anzeigen",
-      "gender_command": "/choose_gender - Geschlecht des Begleiters wählen",
-      "status_command": "/status - Kontostatus und Abonnement-Info anzeigen",
-      "language_command": "/language - Interface-Sprache wählen",
-      "restart_command": "/restart - Bot neu starten und alle Daten löschen",
-      "stop_command": "/stop - Interaktion stoppen und alle Daten löschen",
+      "start_command": "/start - Bot starten",
+      "help_command": "/help - Hilfe",
+      "gender_command": "/choose_gender - Geschlecht ändern",
+      "status_command": "/status - Kontostatus",
+      "language_command": "/language - Sprache",
+      "quiz_command": "/quiz - Kennenlernen",
+      "restart_command": "/restart - Bot neustarten",
+      "stop_command": "/stop - Bot stoppen",
       "communication_title": "💬 Kommunikation:",
       "free_limit": "• Kostenlos: {free_limit} Nachrichten pro Tag",
-      "premium_unlimited": "• Premium: unbegrenzte Kommunikation",
+      "premium_unlimited": "• Premium: unbegrenzte Kommunikation.",
       "companion_title": "🎭 Begleiter-Auswahl:",
       "female_description": "• Mädchen - süß und einfühlsam",
       "male_description": "• Junge - selbstbewusst und verspielt",
       "premium_title": "💎 Premium-Abonnement:",
-      "premium_description": "Ermöglicht unbegrenzte Kommunikation und zusätzliche Funktionen",
+      "premium_description": "• Ermöglicht unbegrenzte Kommunikation und zusätzliche Funktionen.",
       "faq_title": "❓ Häufig gestellte Fragen:",
       "context_memory": "• Bot merkt sich Gesprächskontext",
       "gender_change": "• Du kannst das Geschlecht des Begleiters jederzeit ändern",
@@ -45,12 +46,12 @@
       "available_languages": "Verfügbare Sprachen:"
     },
     "restart": {
-      "confirmation": "⚠️ <b>Bot-Neustart</b>\n\nBist du sicher, dass du den Bot neu starten möchtest?\n\n<b>Alle deine Daten werden gelöscht:</b>\n• Chat-Historie\n• Einstellungen\n• Cache\n\nDiese Aktion kann nicht rückgängig gemacht werden!",
+      "confirmation": "🔄 <b>Bot-Neustart</b>\n\nBist du sicher, dass du den Bot neu starten möchtest?\n\n<b>Alle deine Daten werden gelöscht:</b>\n• Chat-Historie\n• Einstellungen\n• Cache\n\nBitte bestätige diese Aktion.",
       "success": "✅ <b>Bot neu gestartet!</b>\n\nAlle Daten gelöscht. Neuer Start...",
       "cancelled": "❌ Neustart abgebrochen"
     },
     "stop": {
-      "confirmation": "⚠️ <b>Bot stoppen</b>\n\nBist du sicher, dass du den Bot stoppen möchtest?\n\n<b>Alle deine Daten werden gelöscht:</b>\n• Chat-Historie\n• Einstellungen\n• Cache\n\nDiese Aktion kann nicht rückgängig gemacht werden!",
+      "confirmation": "🛑 <b>Bot stoppen</b>\n\nBist du sicher, dass du den Bot stoppen möchtest?\n\n<b>Alle deine Daten werden gelöscht:</b>\n• Chat-Historie\n• Einstellungen\n• Cache\n\nDiese Aktion kann nicht rückgängig gemacht werden!",
       "success": "👋 <b>Bot gestoppt</b>\n\nAlle Daten gelöscht. Auf Wiedersehen!",
       "cancelled": "❌ Stoppen abgebrochen"
     }
@@ -64,7 +65,7 @@
   "gender": {
     "choose": "Wähle das Geschlecht deines Begleiters:",
     "toggle_gender": "Geschlecht des Begleiters geändert zu {gender} 😊",
-    "change_warning": "⚠️ Bist du sicher, dass du das Geschlecht des Begleiters ändern möchtest?\n\nDie gesamte Chat-Historie wird gelöscht!",
+    "change_warning": "🔄 Bist du sicher, dass du das Geschlecht des Begleiters ändern möchtest?\n\nDie gesamte Chat-Historie wird gelöscht!",
     "change_confirmed": "Chat-Historie gelöscht. Wähle das Geschlecht deines Begleiters:",
     "change_cancelled": "Geschlechtsänderung abgebrochen. Du kannst weiter chatten."
   },
