--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -12,26 +12,27 @@
       "reset_info": "Лимит обновится завтра в полночь",
       "premium_days": "⏰ Премиум подписка истекает через {days} дн.",
       "premium_hours": "⏰ Премиум подписка истекает через {hours} ч.",
-      "premium_expiring": "⚠️ Премиум подписка истекает сегодня!"
+      "premium_expiring": "⏰ Премиум подписка истекает сегодня!"
     },
     "help": {
       "title": "🤖 Помощь по боту",
       "commands_title": "Доступные команды:",
-      "start_command": "/start - Начать общение с ботом",
-      "help_command": "/help - Показать эту справку",
-      "gender_command": "/choose_gender - Выбрать пол компаньона",
-      "status_command": "/status - Показать статус аккаунта и подписки",
-      "language_command": "/language - Выбрать язык интерфейса",
-      "restart_command": "/restart - Перезапустить бота и очистить все данные",
-      "stop_command": "/stop - Остановить взаимодействие и очистить все данные",
+      "start_command": "/start - Запустить бота",
+      "help_command": "/help - Справка",
+      "gender_command": "/choose_gender - Сменить пол",
+      "status_command": "/status - Статус аккаунта",
+      "language_command": "/language - Язык",
+      "quiz_command": "/quiz - Знакомство",
+      "restart_command": "/restart - Перезапуск бота",
+      "stop_command": "/stop - Остановить бота",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
-      "premium_unlimited": "• Премиум: безлимитное общение",
+      "premium_unlimited": "• Премиум: безлимитное общение.",
       "companion_title": "🎭 Выбор компаньона:",
       "female_description": "• Девушка - милая и эмпатичная",
       "male_description": "• Молодой человек - уверенный и игривый",
       "premium_title": "💎 Премиум подписка:",
-      "premium_description": "• Открывает безлимитное общение и дополнительные возможности",
+      "premium_description": "• Открывает безлимитное общение и дополнительные возможности.",
       "faq_title": "❓ Частые вопросы:",
       "context_memory": "• Бот запоминает контекст разговора",
       "gender_change": "• Можно сменить пол компаньона в любое время",
@@ -45,12 +46,12 @@
       "available_languages": "Доступные языки:"
     },
     "restart": {
-      "confirmation": "⚠️ <b>Перезапуск бота</b>\n\nВы уверены, что хотите перезапустить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
+      "confirmation": "🔄 <b>Перезапуск бота</b>\n\nВы уверены, что хотите перезапустить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nПожалуйста, подтвердите действие.",
       "success": "✅ <b>Бот перезапущен!</b>\n\nВсе данные очищены. Начинаем заново...",
       "cancelled": "❌ Перезапуск отменен"
     },
     "stop": {
-      "confirmation": "⚠️ <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
+      "confirmation": "🛑 <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
       "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!",
       "cancelled": "❌ Остановка отменена"
     }
@@ -66,7 +67,7 @@
     "choose_gender": "Выбери пол компаньона:",
     "gender_selected": "Выбран пол: {gender} 😊",
     "toggle_gender": "Пол компаньона изменен на {gender} 😊",
-    "change_warning": "⚠️ Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
+    "change_warning": "🔄 Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
     "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
     "change_cancelled": "Смена пола отменена. Можете продолжить общение."
   },
