add: policy links, readme update, ru i18n to policy

--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -180,6 +180,8 @@
   "buttons": {
     "agree_privacy": "Согласен с политикой конфиденциальности",
     "read_privacy": "Читать политику",
+    "read_terms": "Читать соглашение",
+    "read_disclaimer": "Читать отказ от ответственности",
     "choose_female": "Выбрать девушку 😊",
     "choose_male": "Выбрать молодого человека 😉",
     "female": "Девушка 😊",
